--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p> Watch this one minute video so you understand why you should <br />use our services! </p>
           </div>
           <video autoplay muted>
-            <source src="img/video/About-company.mp4" type="video/mp4" /> Your browser does not support the video tag.
+            <source src="img/video/About-company-opt.mp4" type="video/mp4" /> Your browser does not support the video tag.
           </video>
           <!-- <iframe
             src="https://www.youtube.com/embed/qvnLdbUdUzo"
